Adicionar arquivos para criação e visualização de benchmarks comparando os algoritmos A* e Dijkstra no contexto da aplicação

--- a/.gitignore
+++ b/.gitignore
@@ -48,9 +48,6 @@ Thumbs.db
 cache/
 osmnx_cache/
 
-# Anotações e observações acerca do projeto
-notes_for_developer/
-teste.py
+# Other
 requirements.in
-benchmark_algoritmos.py
-benchmark_report.md
+benchmark_results/
